# LDPC-with-SIMD

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
example/: EMS:LDPC_N96_K48_GF256.yaml  G_PAC.alist  G_SPP.alist  NMS:10GBPS-ETHERNET_1723_2048.yaml  SPA:10GBPS-ETHERNET_1723_2048.yaml  simon.alist  simple.alist  test.alist
include/: main.hpp
include/Alist/: Alist.hpp  alist_matrix.h  nbalist_matrix.h
include/Channel/: Channel.hpp
include/Combine/: Combine.hpp
include/LDPC/: LDPC.hpp  NBLDPC.hpp  NBLLR.hpp  Tanner.hpp
include/MatrixMath/: MatrixMath.hpp  NoramlMath.hpp  SIMDMath.hpp
include/Modem/: Modem.hpp
include/UI/: pyplot.hpp
include/alist/: Alist.hpp  alist_matrix.h  nbalist_matrix.h
include/utils/: utils.hpp
lib/libGF/: CMakeLists.txt
lib/libGF/include/: GF.hpp
lib/libGF/src/: GF.cpp
scripts/: SIMD.py  alist.py  makeAlist.py  plot.py  tanner.py  waveshow.py
src/: main.cpp
src/Alist/: Alist.cpp  alist_matrix.c  nbalist_matrix.c
src/Channel/: Channel.cpp
src/LDPC/: LDPC.cpp  NBLDPC.cpp  NBLLR.cpp  NBTanner.cpp  Tanner.cpp
src/MatrixMath/: MatrixMath.cpp  NBMatrixMath.cpp
src/Modem/: Modem.cpp
src/UI/: pyplot.cpp
src/alist/: Alist.cpp  Alist.hpp  alist_matrix.cpp  alist_matrix.h  nbalist_matrix.h
src/utils/: utils.cpp
